<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookInfoActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/btnBack"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btbBackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <ImageView
        android:id="@+id/bookCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bookCoverDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bookTitle"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bookCover"
        app:layout_constraintStart_toStartOf="@+id/bookCover"
        app:layout_constraintTop_toBottomOf="@+id/bookCover" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bookAuthor"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/bookCover"
        app:layout_constraintStart_toStartOf="@+id/bookCover"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle" />

    <TextView
        android:id="@+id/bookDescription"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_marginTop="16dp"
        android:justificationMode="inter_word"
        android:maxWidth="360dp"
        android:scrollbars="vertical"
        android:text="@string/bookDescription"
        app:layout_constraintEnd_toEndOf="@+id/bookCover"
        app:layout_constraintStart_toStartOf="@+id/bookCover"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/icon_shopping_cart"
        android:drawableTint="@color/white"
        android:text="@string/bookPrice"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/bookDescription"
        app:layout_constraintStart_toStartOf="@+id/bookDescription"
        app:layout_constraintTop_toBottomOf="@+id/bookAvail" />

    <TextView
        android:id="@+id/bookAvail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Available: 00+"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/bookAuthor"
        app:layout_constraintStart_toStartOf="@+id/bookAuthor"
        app:layout_constraintTop_toBottomOf="@+id/bookDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>